--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -156,12 +156,11 @@ header > nav > ul {
   height: 2.5rem;
   width: 9rem;
   position: absolute;
-  margin-left: 52rem;
-  margin-top: -8rem;
   border-style: solid solid none none;
   border-color: white;
   border-width: 1px;
-  /* border-radius: 8px; */
+  right: -0.8rem;
+  top: -0.8rem;
   border-top-right-radius: 8px 8px;
   background-color: transparent;
 }
@@ -170,8 +169,8 @@ header > nav > ul {
   height: 5rem;
   width: 7rem;
   position: absolute;
-  margin-left: -54rem;
-  margin-top: 5.2rem;
+  bottom: -0.6rem;
+  left: -0.8rem;
   border-style: none none solid solid;
   border-color: red;
   border-width: 1px;
@@ -184,8 +183,8 @@ header > nav > ul {
   height: 5.7rem;
   width: 41rem;
   position: absolute;
-  margin-left: 20rem;
-  margin-top: 4.5rem;
+  right: -0.8rem;
+  bottom: -0.8rem;
   border-style: none solid solid none;
   border-color: red;
   border-width: 1px;
@@ -195,8 +194,17 @@ header > nav > ul {
 }
 
 .right-outer {
-  margin-left: 22rem;
-  margin-top: 6rem;
+  height: 5.7rem;
+  width: 40.5rem;
+  position: absolute;
+  right: -1.6rem;
+  bottom: -1.6rem;
+  border-style: none solid solid none;
+  border-color: red;
+  border-width: 1px;
+  /* border-radius: 8px; */
+  border-bottom-right-radius: 8px 8px;
+  background-color: transparent;
 }
 
 .play-store {
@@ -380,7 +388,6 @@ header > nav > ul {
 .strip {
   position: relative;
   font-size: 2.6rem;
-  z-index: 100;
 }
 
 .strip > img {
@@ -860,6 +867,13 @@ footer {
   }
 }
 
+@media only screen and (max-width: 1400px) and (min-width: 1300px) {
+  .earn-txt {
+    font-size: 7rem;
+    text-align: center;
+  }
+}
+
 @media (min-width: 1300px) {
   #game-content-box {
     margin-top: 95px;
@@ -874,11 +888,7 @@ footer {
   }
 
   .up-div {
-    margin-top: -9rem;
-  }
-
-  .earn-txt {
-    font-size: 7.5rem;
+    margin-top: -13rem;
   }
 
   .earn-div {
@@ -891,26 +901,6 @@ footer {
 }
 
 @media (min-width: 1400px) {
-  .left-btm {
-    margin-left: -64rem;
-    margin-top: 6rem;
-  }
-
-  .right-btm {
-    margin-left: 30rem;
-    margin-top: 5rem;
-  }
-
-  .right-outer {
-    margin-left: 31.5rem;
-    margin-top: 6rem;
-  }
-
-  .right-up {
-    margin-left: 62rem;
-    margin-top: -9.5rem;
-  }
-
   .game-outer-div {
     height: 29rem;
   }
@@ -920,7 +910,7 @@ footer {
   }
 
   .up-div {
-    margin-top: -5rem;
+    margin-top: -11.2rem;
   }
 
   .strip-left {
@@ -939,26 +929,6 @@ footer {
 }
 
 @media (min-width: 1500px) {
-  .left-btm {
-    margin-left: -69rem;
-    margin-top: 7rem;
-  }
-
-  .right-btm {
-    margin-left: 35rem;
-    margin-top: 6.5rem;
-  }
-
-  .right-outer {
-    margin-left: 37rem;
-    margin-top: 8rem;
-  }
-
-  .right-up {
-    margin-left: 67rem;
-    margin-top: -10rem;
-  }
-
   .side-line {
     height: 80px;
     width: 10px;
@@ -977,8 +947,8 @@ footer {
   }
 
   .up-div {
-    margin-top: -4rem;
-    gap: 2rem;
+    margin-top: -11.2rem;
+    gap: 3rem;
   }
 
   .strip-left {
@@ -1015,28 +985,6 @@ footer {
   }
 }
 
-@media (min-width: 1600px) {
-  .left-btm {
-    margin-left: -74rem;
-    margin-top: 8rem;
-  }
-
-  .right-btm {
-    margin-left: 39.3rem;
-    margin-top: 6.5rem;
-  }
-
-  .right-outer {
-    margin-left: 41.5rem;
-    margin-top: 9rem;
-  }
-
-  .right-up {
-    margin-left: 69rem;
-    margin-top: -7.8rem;
-  }
-}
-
 @media (min-width: 1650px) {
   #gm-car {
     margin-top: -130px;
@@ -1056,26 +1004,6 @@ footer {
 }
 
 @media (min-width: 1710px) {
-  .left-btm {
-    margin-left: -80rem;
-    margin-top: 8.5rem;
-  }
-
-  .right-btm {
-    margin-left: 45rem;
-    margin-top: 7.5rem;
-  }
-
-  .right-outer {
-    margin-left: 47rem;
-    margin-top: 9rem;
-  }
-
-  .right-up {
-    margin-left: 75rem;
-    margin-top: -9rem;
-  }
-
   #gm-car {
     margin-top: -150px;
   }
@@ -1111,50 +1039,6 @@ footer {
   }
 }
 
-@media (max-width: 1800px) {
-  .left-btm {
-    margin-left: -84.5rem;
-    margin-top: 9.5rem;
-  }
-
-  .right-btm {
-    margin-left: 50rem;
-    margin-top: 9rem;
-  }
-
-  .right-outer {
-    margin-left: 52rem;
-    margin-top: 11rem;
-  }
-
-  .right-up {
-    margin-left: 79rem;
-    margin-top: -9.5rem;
-  }
-}
-
-@media (max-width: 1300px) {
-  .left-btm {
-    margin-left: -59rem;
-    margin-top: 5.3rem;
-  }
-
-  .right-btm {
-    margin-left: 24.5rem;
-    margin-top: 4.3rem;
-  }
-
-  .right-outer {
-    margin-left: 26rem;
-    margin-top: 5.5rem;
-  }
-
-  .right-up {
-    margin-left: 56.5rem;
-    margin-top: -8rem;
-  }
-}
-
 @media (max-width: 1280px) {
   #game-section {
     margin-bottom: 75px;
@@ -1177,26 +1061,6 @@ footer {
 }
 
 @media (max-width: 1250px) {
-  .left-btm {
-    margin-left: -56.5rem;
-    margin-top: 5rem;
-  }
-
-  .right-btm {
-    margin-left: 22.5rem;
-    margin-top: 4rem;
-  }
-
-  .right-outer {
-    margin-left: 24rem;
-    margin-top: 5rem;
-  }
-
-  .right-up {
-    margin-left: 54.5rem;
-    margin-top: -7.5rem;
-  }
-
   #game-content-box {
     margin-top: 50px;
   }
@@ -1210,7 +1074,7 @@ footer {
   }
 
   .up-div {
-    margin-top: -4rem;
+    margin-top: -11.2rem;
   }
 
   .up-text {
@@ -1258,48 +1122,6 @@ footer {
   .right-up {
     height: 2.5rem;
     width: 9rem;
-    position: absolute;
-    margin-left: 52rem;
-    margin-top: -8rem;
-    border-style: solid solid none none;
-    border-color: white;
-    border-width: 1px;
-    /* border-radius: 8px; */
-    border-top-right-radius: 8px 8px;
-    background-color: transparent;
-  }
-
-  .left-btm {
-    height: 5rem;
-    width: 7rem;
-    position: absolute;
-    margin-left: -54rem;
-    margin-top: 5.2rem;
-    border-style: none none solid solid;
-    border-color: red;
-    border-width: 1px;
-    /* border-radius: 8px; */
-    border-bottom-left-radius: 8px 8px;
-    background-color: transparent;
-  }
-
-  .right-btm {
-    height: 5.7rem;
-    width: 41rem;
-    position: absolute;
-    margin-left: 20rem;
-    margin-top: 4.5rem;
-    border-style: none solid solid none;
-    border-color: red;
-    border-width: 1px;
-    /* border-radius: 8px; */
-    border-bottom-right-radius: 8px 8px;
-    background-color: transparent;
-  }
-
-  .right-outer {
-    margin-left: 22rem;
-    margin-top: 6rem;
   }
 
   .up-div {
