--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -31,15 +31,15 @@ header {
   align-items: center;
 }
 
-header > #logo {
+header>#logo {
   height: 32px;
 }
 
-header > nav {
+header>nav {
   margin-right: 2rem;
 }
 
-header > nav > ul {
+header>nav>ul {
   list-style: none;
   display: flex;
   gap: 2rem;
@@ -136,7 +136,7 @@ header > nav > ul {
   margin-right: 1rem;
 }
 
-#card-content > h2 {
+#card-content>h2 {
   /* position: absolute; */
   margin-left: -6rem;
   width: 19rem;
@@ -292,7 +292,7 @@ header > nav > ul {
   display: none;
 }
 
-#porfolio-content-wrapper > img {
+#porfolio-content-wrapper>img {
   width: 100%;
   position: absolute;
   top: 0;
@@ -328,12 +328,12 @@ header > nav > ul {
   justify-content: center;
 }
 
-.card > .card-num {
+.card>.card-num {
   width: 110px;
   position: relative;
 }
 
-.card-num > img {
+.card-num>img {
   position: absolute;
   left: -14px;
   top: -14px;
@@ -349,12 +349,12 @@ header > nav > ul {
   margin-left: 3rem;
 }
 
-.text-card > .card-title {
+.text-card>.card-title {
   /* margin-left: 2rem; */
   color: #e01717;
 }
 
-.text-card > .text {
+.text-card>.text {
   width: 75%;
   font-size: 20px;
 }
@@ -374,7 +374,7 @@ header > nav > ul {
   margin-bottom: 3rem;
 }
 
-#btn-row > button {
+#btn-row>button {
   display: block;
   margin: auto;
   padding: 1rem 5rem;
@@ -392,11 +392,11 @@ header > nav > ul {
   font-size: 2.6rem;
 }
 
-.strip > img {
+.strip>img {
   width: 100%;
 }
 
-.strip > h3 {
+.strip>h3 {
   font-family: Formula1;
   font-weight: 500;
   font-size: 104.18px;
@@ -449,7 +449,7 @@ header > nav > ul {
   padding: 1rem 0;
 }
 
-#game-content-wrapper > img {
+#game-content-wrapper>img {
   width: 100%;
   position: absolute;
   top: 0;
@@ -618,7 +618,7 @@ p {
   color: rgba(43, 234, 226, 1);
 }
 
-#gm-strip > img {
+#gm-strip>img {
   width: 100%;
 }
 
@@ -651,7 +651,7 @@ p {
   margin-bottom: 1.8rem;
 }
 
-.col-heading > h2 {
+.col-heading>h2 {
   font-size: 3rem;
 }
 
@@ -663,14 +663,14 @@ p {
   margin-top: 5px;
 }
 
-.col > p {
+.col>p {
   margin-top: 1rem;
   font-family: "Montserrat", sans-serif;
   font-size: 1rem;
   color: #989494;
 }
 
-.col > h4 {
+.col>h4 {
   margin-top: 2rem;
   font-family: "Poppins", sans-serif;
   font-size: 1.7rem;
@@ -703,7 +703,7 @@ p {
   align-items: center;
 }
 
-#final-content-wrapper > p {
+#final-content-wrapper>p {
   font-family: "Montserrat", sans-serif;
   color: #989494;
   font-size: 20px;
@@ -825,6 +825,15 @@ footer {
 .pm-nav-items {
   font-size: 20px;
   font-family: formula-reg;
+}
+
+.pm-nav-items>a {
+  color: white;
+  text-decoration: none;
+}
+
+.pm-nav-items>a:hover {
+  color: gainsboro;
 }
 
 #copyright {
@@ -1099,7 +1108,7 @@ footer {
 
   /* .strip {} */
 
-  #card-content > h2 {
+  #card-content>h2 {
     font-size: 1.4rem;
     margin-left: 6rem;
   }
@@ -1144,10 +1153,16 @@ footer {
       width: 100px;
     }
 
-    .card-num > img {
-      width: 100px;
-      top: 16px;
-      left: -28px;
+    .card-num>img {
+      height: 13rem;
+      width: 15rem;
+      top: -36px;
+      left: -6rem;
+    }
+
+    .up-shift {
+      margin-top: -1.5rem;
+      margin-right: 1rem;
     }
 
     .text-card {
@@ -1156,9 +1171,10 @@ footer {
       }
     }
 
-    .text-card > .text {
-      width: 90%;
+    .text-card>.text {
+      width: 100%;
       word-break: break-all;
+      font-family: formula-bold;
     }
   }
 
@@ -1296,13 +1312,13 @@ footer {
     width: 80rem;
   }
 
-  .text-card > .card-title {
+  .text-card>.card-title {
     margin-left: 2rem;
     width: 100%;
     color: #e01717;
   }
 
-  .text-card > .text {
+  .text-card>.text {
     width: 90%;
     font-size: 19px;
     margin-left: 1.5rem;
@@ -1374,7 +1390,7 @@ footer {
     margin-top: 5.8rem;
   }
 
-  .col-heading > h2 {
+  .col-heading>h2 {
     font-size: 2.2rem;
   }
 
@@ -1424,7 +1440,7 @@ footer {
     margin-top: 115px;
   }
 
-  .col > p {
+  .col>p {
     font-size: 0.8rem;
     word-spacing: 1px;
   }
@@ -1437,6 +1453,12 @@ footer {
 }
 
 @media (max-width: 426px) {
+
+  #footer-content-m>li>a {
+    color: white;
+    text-decoration: none;
+  }
+
   .up-div {
     display: none;
   }
@@ -1457,7 +1479,7 @@ footer {
   }
 
   .up-text {
-    font-size: 1.7rem;
+    font-size: 6vw;
   }
 
   .strip-left {
@@ -1472,7 +1494,83 @@ footer {
     margin-left: -1.3rem;
     margin-top: 8px;
   }
+
+  #porfolio-content-wrapper-m {
+    position: absolute;
+  }
+
+  .num-card-row1,
+  .num-card-row2 {
+    /* position: relative; */
+    margin-left: -1.5rem;
+  }
+
+  /* .num-card-heading {} */
 }
 
-@media (max-width: 1000px) {
+@media(max-width: 410px) {
+  .up-text {
+    font-size: 1.5rem;
+  }
+}
+
+@media(max-width:393px) {
+  .earn-txt {
+    font-size: 9vw;
+  }
+
+  .earn-div {
+    margin-left: 12.5rem;
+  }
+}
+
+@media (max-width: 385px) {
+  .f-text-m {
+    font-size: 2.8rem;
+  }
+
+  .earn-txt {
+    font-size: 2.2rem;
+  }
+
+  .earn-div {
+    margin-left: 11.5rem;
+  }
+
+  .up-text {
+    font-size: 1.5rem;
+  }
+}
+
+@media(max-width:375px) {
+  .up-text {
+    font-size: 6vw;
+  }
+}
+
+@media(max-width: 350px) {
+  .earn-txt {
+    font-size: 9vw;
+  }
+
+  .earn-div {
+    font-size: 3.5vw;
+    margin-left: 10rem;
+  }
+}
+
+@media(max-width:335px) {
+  .f-text-m {
+    font-size: 12vw;
+  }
+}
+
+@media(max-width:310px) {
+  .earn-txt {
+    font-size: 8.5vw;
+  }
+
+  .earn-div {
+    margin-left: 7rem;
+  }
 }
