--- a/assets/styles/toc.css
+++ b/assets/styles/toc.css
@@ -121,7 +121,7 @@ main {
 
 .clause-wrapper a {
   text-decoration: none;
-  color: blue;
+  color: white;
   font-size: 14px;
   line-height: 1.4rem;
 }
