changed upcomming part

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -989,6 +989,13 @@ footer {
   margin-top: -20px;
 }
 
+.xxx{
+  text-align: end;
+  color: #2BEAE2;
+  font-size: 1rem;
+}
+
+
 /* media queries */
 
 @media (min-width: 780px) {
@@ -1720,6 +1727,29 @@ footer {
   }
 
 }
+
+@media (min-width:500px) and (max-width:580px) {
+  .earn-txt {
+    font-size: 3.2rem;
+    margin-top: 1.5rem;
+  }
+}
+
+@media (max-width:500px) {
+  .earn-txt {
+    font-size: 2.8rem;
+    margin-top: 1.5rem;
+  }
+}
+
+
+@media (min-width:580px) and (max-width:650px) {
+  .earn-txt {
+    font-size: 3.8rem;
+    margin-top: 1.5rem;
+  }
+}
+
 
 @media (max-width: 426px) {
   #footer-content-m > li > a {
