--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -91,10 +91,14 @@
     font-family: Montserrat;
     font-size: 10px;
     font-style: normal;
+    font-weight:400;
     color: #8a8a8a;
     bottom: 33px;
-
-
+    text-align: center;
+  }
+  .copywrite{
+    font-size:11px;
+    margin-right:5px;
   }
   .open-nav {
     transform: translateX(0%);
@@ -348,17 +352,17 @@
     margin-top: 28px;
   }
   #footer-card {
-    height: 170px;
+    height: 143px;
     background-color: #d41919;
     border-radius: 20px;
     padding: 16px 12px;
-    margin-top: 20px;
+    margin: 40px 0;
   }
   #footer-card-header {
-    height: 72px;
+    height: 63px;
     width: 100%;
     border-radius: 16px;
-    background-color: #0a0a0a;
+    background-color: #FFF;
     display: flex;
     align-items: center;
     padding: 20px;
@@ -377,7 +381,7 @@
   }
   #footer-card p {
     font-size: 16px;
-    color: #0a0a0a;
+    color: #FFF;
     font-family: "Montserrat", sans-serif;
     font-weight: 600;
     line-height: 20px;
@@ -443,9 +447,13 @@
     z-index: 200;
   }
   .num-card-m {
-    width: 250px;
+    width: 197px;
     margin: auto;
   }
+  .num-card-heading1{
+    width:230px;
+  }
+  
   #right-x {
     position: absolute;
     right: 0;
@@ -472,7 +480,8 @@
     z-index: 200;
   }
   .num-card-num-img img {
-    width: 100%;
+    /* width: 100%; */
+    margin-left:-41px;
   }
   .num-card-heading {
     color: #e01717;
@@ -484,14 +493,15 @@
     z-index: 200;
   }
   .num-card-row2 {
-    margin-top: 10px;
-    width: 225px;
+    /* margin-top: 10px; */
+    width: 235px;
     position: relative;
     z-index: 200;
   }
   #mid-num-card {
     position: relative;
-    left: 49px;
+    left: 65px;
+    /* margin-top:1rem; */
   }
   #num-card-more-btn {
     position: relative;
@@ -520,5 +530,67 @@
   #porfolio-content{
     display: none;
   }
-  
+  .x-mb-element{
+    font-size:6rem;
+    color: rgba(255, 255, 255, 0.12);
+  }
+  .x-mb-left-first{
+    position: absolute;
+    top:calc(-2%);
+    left:calc(0% - 1.6rem);
+  }
+  .x-mb-left-second{
+    position: absolute;
+    top:calc(8%);
+    left:calc(0% - 1.6rem);
+  }
+  .x-mb-left-third{
+    position: absolute;
+    top:calc(4%);
+    left:calc(13%);
+  }
+  .x-mb-middle{
+    font-size: 33px;
+    width: 254px;
+    font-family: formula-bold;
+    color: #272727;
+    position: absolute;
+    top: calc(6.25%);
+    left: calc(35%);
+  }
+  .x-mb-right-first{
+    position: absolute;
+    top:calc(19%);
+    right: calc(0% - 1.2rem);
+  }
+  .x-mb-right-second{
+    position: absolute;
+    top:calc(29%);
+    right: calc(0% - 1.2rem);
+  }
+  .x-mb-right-third{
+    position: absolute;
+    top: calc(24%);
+    right:calc(13%);
+  }
+  .x-mb-left2-first{
+    position: absolute;
+    top:calc(45%);
+    left:calc(0% - 1.6rem);
+  }
+  .x-mb-left2-second{
+    position: absolute;
+    top:calc(55%);
+    left:calc(0% - 1.6rem);
+  }
+  .x-mb-left2-third{
+    position: absolute;
+    top:calc(50%);
+    left:calc(13%);
+  }
+}
+@media (min-width:500px) and (max-width:780px) {
+  #footer-card{
+    height:149px;
+  }
 }
